MainForwardServlet追加 LoginCheckServletにMainForwardにフォワードする機能を追加

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -14,15 +14,6 @@
     </servlet-mapping>
 
     <servlet>
-        <servlet-name>MyUserForwardServlet</servlet-name>
-        <servlet-class>servlet.MyUserForwardServlet</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>MyUserForwardServlet</servlet-name>
-        <url-pattern>/MyUserForward</url-pattern>
-    </servlet-mapping>
-
-    <servlet>
         <servlet-name>TTForwardServlet</servlet-name>
         <servlet-class>servlet.TTForwardServlet</servlet-class>
     </servlet>
@@ -191,6 +182,22 @@
     <servlet-mapping>
         <servlet-name>ReturnTop</servlet-name>
         <url-pattern>/ReturnTop</url-pattern>
+    </servlet-mapping>
+    <servlet>
+        <servlet-name>MainForwardServlet</servlet-name>
+        <servlet-class>servlet.MainForwardServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>MainForwardServlet</servlet-name>
+        <url-pattern>/MainForward</url-pattern>
+    </servlet-mapping>
+    <servlet>
+        <servlet-name>MyUserForwardServlet</servlet-name>
+        <servlet-class>servlet.MyUserForwardServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>MyUserForwardServlet</servlet-name>
+        <url-pattern>/MyUserForward</url-pattern>
     </servlet-mapping>
 
     <error-page>
