ユーザー検索結果からユーザー詳細画面へ遷移できるように変更

--- a/hsqldb/lib/db/test.properties
+++ b/hsqldb/lib/db/test.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.4.1
-#Fri Sep 21 20:05:02 JST 2018
+#Fri Sep 28 10:31:17 JST 2018
 version=2.4.1
-modified=yes
+modified=no
 tx_timestamp=0
