--- a/hsqldb/lib/db/test.properties
+++ b/hsqldb/lib/db/test.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.4.1
-#Sun Sep 30 17:44:39 JST 2018
+#Tue Oct 02 10:49:32 JST 2018
 version=2.4.1
-modified=yes
+modified=no
 tx_timestamp=0
