--- a/hsqldb/lib/db/test.properties
+++ b/hsqldb/lib/db/test.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.4.1
-#Tue Oct 02 10:49:32 JST 2018
+#Tue Oct 02 10:54:52 JST 2018
 version=2.4.1
-modified=no
+modified=yes
 tx_timestamp=0
