削除したデータを復帰

--- a/hsqldb/lib/db/test.properties
+++ b/hsqldb/lib/db/test.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.4.1
-#Sat Oct 06 16:31:25 JST 2018
+#Thu Oct 18 12:49:42 JST 2018
 version=2.4.1
-modified=yes
+modified=no
 tx_timestamp=0
