時間割表示機能の追加 シラバス詳細を見ようとしたとき500エラーになる問題を修正

--- a/hsqldb/lib/db/test.properties
+++ b/hsqldb/lib/db/test.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.4.1
-#Thu Oct 18 12:49:42 JST 2018
+#Fri Oct 19 19:46:00 JST 2018
 version=2.4.1
-modified=no
+modified=yes
 tx_timestamp=0
