--- a/hsqldb/lib/db/test.properties
+++ b/hsqldb/lib/db/test.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.4.1
-#Wed Oct 24 19:01:41 JST 2018
+#Wed Oct 24 20:45:16 JST 2018
 version=2.4.1
-modified=no
+modified=yes
 tx_timestamp=0
